linux (1:3.18.48-3) UNRELEASED; urgency=medium

  * Added Bubba|2 wifi drivers

 -- Charles Leclerc <leclerc.charles@gmail.com>  Thu, 09 Mar 2017 20:44:42 -0500

linux (1:3.18.48-2) jessie; urgency=medium

  * Added missing DVB em28xxx modules 

 -- Charles Leclerc <leclerc.charles@gmail.com>  Thu, 09 Mar 2017 02:03:17 +0000

linux (1:3.18.48-1) jessie; urgency=medium

  * New upstream version
  * Added network namespaces modules requested in #1
  * Added DVB modules - see http://forum.excito.com/viewtopic.php?f=9&t=5953

 -- Charles Leclerc <leclerc.charles@gmail.com>  Tue, 07 Mar 2017 14:21:17 -0500

linux (1:3.18.44-1) jessie; urgency=medium

  * New upstream version

 -- Charles Leclerc <leclerc.charles@gmail.com>  Tue, 08 Nov 2016 13:44:30 -0500

linux (1:3.18.27-1) jessie; urgency=medium

  * New upstream version
  * Harmonized B3 and B2 network options

 -- Charles Leclerc <leclerc.charles@gmail.com>  Mon, 22 Feb 2016 16:29:56 +0000

linux (1:3.18.24-1) jessie; urgency=medium

  * New upstream version

 -- Charles Leclerc <leclerc.charles@gmail.com>  Tue, 17 Nov 2015 21:24:41 -0500

linux (1:3.18.22-3) jessie; urgency=medium

  * Changed default value for bubbatwo led mode

 -- Charles Leclerc <leclerc.charles@gmail.com>  Wed, 14 Oct 2015 21:38:11 -0400

linux (1:3.18.22-2) jessie; urgency=medium

  * Small fix in bubbatwo driver
  * Fix prerm/postinst script to remove depmod-generated files on removal/upgrade

 -- Charles Leclerc <leclerc.charles@gmail.com>  Tue, 06 Oct 2015 10:19:55 -0400

linux (1:3.18.22-1) jessie; urgency=medium

  * New upstream version 
  * Re-added CONFIG_KEYBOARD_GPIO in b3 config for bubba-buttond

 -- Charles Leclerc <leclerc.charles@gmail.com>  Mon, 05 Oct 2015 18:51:24 -0400

linux (1:3.18.21-2) jessie; urgency=medium

  * Re-added rev 1 Bubba|2 DTS file see http://forum.excito.com/viewtopic.php?f=7&t=5821

 -- Charles Leclerc <leclerc.charles@gmail.com>  Sun, 13 Sep 2015 21:32:35 -0400
