@@ -1,6 +1,6 @@
 --- /dev/null
 +++ b/arch/arm/configs/bubba3_defconfig
-@@ -0,0 +1,837 @@
+@@ -0,0 +1,839 @@
 +# CONFIG_LOCALVERSION_AUTO is not set
 +CONFIG_SYSVIPC=y
 +CONFIG_POSIX_MQUEUE=y
@@ -88,6 +88,8 @@
 +CONFIG_INET6_XFRM_MODE_BEET=m
 +CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION=m
 +CONFIG_IPV6_SIT=m
++CONFIG_IPV6_SIT_6RD=y
++CONFIG_IPV6_TUNNEL=m
 +CONFIG_NETFILTER=y
 +CONFIG_NF_CONNTRACK=m
 +CONFIG_NF_CONNTRACK_ZONES=y
