@@ -1,6 +1,6 @@
 --- /dev/null
 +++ b/arch/powerpc/configs/bubbatwo_defconfig
-@@ -0,0 +1,705 @@
+@@ -0,0 +1,706 @@
 +CONFIG_SYSVIPC=y
 +CONFIG_POSIX_MQUEUE=y
 +CONFIG_FHANDLE=y
@@ -77,6 +77,7 @@
 +CONFIG_INET6_XFRM_MODE_TUNNEL=m
 +CONFIG_INET6_XFRM_MODE_BEET=m
 +CONFIG_IPV6_SIT=m
++CONFIG_IPV6_SIT_6RD=y
 +CONFIG_IPV6_TUNNEL=m
 +CONFIG_NETFILTER=y
 +CONFIG_NF_CONNTRACK=m
