@@ -1,6 +1,7 @@
 linux (1:3.18.48-3) UNRELEASED; urgency=medium
 
   * Added Bubba|2 wifi drivers
+  * Added IPv6 6rd tunnel support (see http://forum.excito.com/viewtopic.php?f=9&p=28122 )
 
  -- Charles Leclerc <leclerc.charles@gmail.com>  Thu, 09 Mar 2017 20:44:42 -0500
 
